# rust_first

./: .gitignore  Cargo.toml  test.rest
.kiro/hooks/: rust-test-generator.kiro.hook
generics/src/: eq.rs  lib.rs
httpie/: Cargo.toml  README.md
httpie/src/: main.rs
kv/: Cargo.toml  README.MD
kv/examples/: client.rs  client_tls.rs  dummy_server.rs  dummy_sled_server.rs  dummy_sled_server_tls.rs  gen_cert.rs
kv/fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
kv/protos/: messages.proto
kv/src/: error.rs  lib.rs
kv/src/command/: commandservice.rs  mod.rs  service.rs
kv/src/network/: frame.rs  mod.rs  tls.rs
kv/src/pb/: abi.rs  mod.rs
kv/src/storage/: mod.rs  sleddb.rs  storage.rs
mpsc-channel/: Cargo.toml
mpsc-channel/src/: channel.rs
queryer/: Cargo.toml
queryer-py/: Cargo.toml
queryer-py/src/: lib.rs
queryer/examples/: covid.rs  cow.rs  dialect.rs  dropt.rs  formater.rs  list.rs  serde.rs  test.rs  thread.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
rgrep/: Cargo.toml
rgrep/src/: error.rs  lib.rs  main.rs
scrape_url/: Cargo.toml  rust.md
scrape_url/src/: main.rs
thumbor/: Cargo.toml  build.rs
thumbor/protos/: messages.proto
thumbor/src/: handler.rs  lib.rs  main.rs
thumbor/src/engine/: engine.rs  mod.rs  photon.rs
thumbor/src/middleware/: mod.rs  request_id.rs  service_time.rs
thumbor/src/pb/: abi.rs  mod.rs
xunmi-py/: Cargo.toml  Makefile  index_wiki.ipynb
xunmi-py/src/: lib.rs
