[workspace]
members = [
    "httpie",
    "queryer",
    "scrape_url",
    "thumbor",
    "queryer-py",
    "kv",
    "rgrep",
    "generics",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["rustls-tls", "blocking"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
prost = "0.13.1"
prost-types = "0.13.1"
prost-build = "0.13.1"
axum = "0.8.0"
base64 = "0.22.1"
bytes = "1.10.1"
image = "0.25.6"
lru = "0.14.0"
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
tower = "0.5.2"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
futures = "0.3.31"
async-prost = "0.4.0"
thiserror = "2.0.10"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing = "0.1.40"
uuid = { version = "1.14.0", features = ["v8"] }
dashmap = "6.1.0"
http = "1.2.1"
sled = "0.34.7"
tempfile = "3.10.0"