[package]
name = "httpie"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["kevin.yang.xgz@gmail.com"]
description = "A simple HTTP client"
repository = "https://github.com/kevin-yang-xgz/httpie"
documentation = "https://docs.rs/httpie"
categories = ["cli"]
keywords = ["http", "cli"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = "3.0.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
