[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }

sled = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
anyhow = { workspace = true }
