[package]
name = "rgrep"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
globset = "0.4.16"
colored = "3.0.0"
dashmap = "5.5.0"
thiserror = { workspace = true }
futures = "0.3.31"
