[package]
name = "thumbor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
photon-rs = "0.3.3"
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
image = { workspace = true }
lru = { workspace = true }
lazy_static = { workspace = true }
percent-encoding = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }
